Hash code calculation of JfrStackTrace is inconsistent

XMLWordPrintable

    • jfr
    • b11
    • 16
    • b15

        After JDK-8250928 JfrStackTrace::record_safe is using new, improved hash code calculation.
        However, JfrStackTrace::record_thread was not updated to this calculation and we ended up with two ways a stack trace hash code will be calculated.
        This situation does not sound right and JfrStackTrace::record_thread should be updated to use the new hash code calculation as well.

              Assignee:
              Jaroslav Bachorík
              Reporter:
              Jaroslav Bachorík
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: