8252754: Hash code calculation of JfrStackTrace is inconsistent

Reviewed-by: egahlin